# rules_runfiles_group

./: .gitattributes  .gitignore  MODULE.bazel  README.md  REPO.bazel
.bcr/: metadata.template.json  source.template.json
.docextract/: BUILD.bazel
.github/workflows/: ci.yml  publish.yml  release.yml  release_prep.sh
example/: .bazelignore  BUILD.bazel  MODULE.bazel  REPO.bazel  go.mod  go.sum
example/consumer/rules/: BUILD.bazel  fake_package.bzl
example/producer/interpreter/: BUILD.bazel  main.go
example/producer/interpreter/loadmap/: BUILD.bazel
example/producer/interpreter/loadmap_generator/: BUILD.bazel  main.go
example/producer/providers/: BUILD.bazel  providers.bzl
example/producer/repository_rules/: local_starlark_repository.bzl
example/producer/rules/: BUILD.bazel  skip_interpreter.bzl  starlark_binary.bzl  starlark_library.bzl
example/producer/stdlib_repo/: BUILD.bazel  REPO.bazel
example/producer/stdlib_repo/collections/: collections.star
example/producer/stdlib_repo/sha256/: BUILD.bazel
example/producer/stdlib_repo/strings/: strings.star
example/src/: 3p_deps_demo.star  BUILD.bazel  adder.star  hasher.star  lib_a.star  lib_a.star.tpl  lib_b.star  lib_b.star.tpl  merge_demo.star
example/src/shell_app/: BUILD.bazel  config.sh  format.sh  greeter.sh
example/src/shell_app/data/: defaults.conf  names.txt
example/src/shell_app/templates/: banner.txt
runfiles_group/: BUILD.bazel  lib.bzl  providers.bzl  runfiles_group_analysis_test.bzl
runfiles_group/private/: BUILD.bazel  lib.bzl
runfiles_group/private/providers/: BUILD.bazel  runfiles_group_info.bzl  runfiles_group_metadata_info.bzl  runfiles_group_selection_info.bzl  runfiles_group_transform_info.bzl
runfiles_group/private/rules/: BUILD.bazel  runfiles_group_analysis_test.bzl
