bazel_dep(name = "rules_runfiles_group")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "hermetic_launcher", version = "0.0.5")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "sha256.bzl", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

local_path_override(
    module_name = "rules_runfiles_group",
    path = "../",
)

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

local_repository(
    name = "std",
    path = "producer/stdlib_repo",
)

local_repository(
    name = "fizzbuzz",
    path = "third_party/fizzbuzz",
)

local_repository(
    name = "stringutil",
    path = "third_party/stringutil",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "irs_f1040",
    integrity = "sha256-PTHCJt8NGJztgOA50Bzw+IIMEBloGg8MpiZN4ne36YI=",
    urls = ["https://www.irs.gov/pub/irs-pdf/f1040.pdf"],
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "net_starlark_go")
