module(name = "rules_runfiles_group_example")

bazel_dep(name = "rules_runfiles_group")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "hermetic_launcher", version = "0.0.5")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "sha256.bzl", version = "0.0.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

local_path_override(
    module_name = "rules_runfiles_group",
    path = "../",
)

local_starlark_repository = use_repo_rule("//producer/repository_rules:local_starlark_repository.bzl", "local_starlark_repository")

local_starlark_repository(
    name = "std",
    copy_files = {"@sha256.bzl//:sha256.star": "sha256/sha256.star"},
    repo_file = "//producer:stdlib_repo/REPO.bazel",
)

local_starlark_repository(
    name = "fizzbuzz",
    repo_file = "//:third_party/fizzbuzz/REPO.bazel",
)

local_starlark_repository(
    name = "stringutil",
    repo_file = "//:third_party/stringutil/REPO.bazel",
)

local_starlark_repository(
    name = "mathlib",
    repo_file = "//:third_party/mathlib/REPO.bazel",
)

local_starlark_repository(
    name = "templates",
    repo_file = "//:third_party/templates/REPO.bazel",
)

local_starlark_repository(
    name = "colors",
    repo_file = "//:third_party/colors/REPO.bazel",
)

local_starlark_repository(
    name = "units",
    repo_file = "//:third_party/units/REPO.bazel",
)

local_starlark_repository(
    name = "limits",
    repo_file = "//:third_party/limits/REPO.bazel",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "irs_f1040",
    integrity = "sha256-PTHCJt8NGJztgOA50Bzw+IIMEBloGg8MpiZN4ne36YI=",
    urls = ["https://www.irs.gov/pub/irs-pdf/f1040.pdf"],
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "net_starlark_go")
