load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles_group/private/providers:runfiles_group_info",
        "//runfiles_group/private/providers:runfiles_group_selection_info",
        "//runfiles_group/private/providers:runfiles_group_transform_info",
    ],
)

bzl_library(
    name = "lib",
    srcs = ["lib.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles_group/private:lib",
    ],
)
