load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    srcs = [
        "lib.bzl",
        "providers.bzl",
        "runfiles_group_analysis_test.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles_group/private/providers:runfiles_group_info",
        "//runfiles_group/private/providers:runfiles_group_metadata_info",
        "//runfiles_group/private/providers:runfiles_group_transform_info",
    ],
)

bzl_library(
    name = "lib",
    srcs = ["lib.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles_group/private:lib",
    ],
)

bzl_library(
    name = "runfiles_group_analysis_test",
    srcs = ["runfiles_group_analysis_test.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//runfiles_group/private/rules:runfiles_group_analysis_test",
    ],
)
