load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "fake_package",
    srcs = ["fake_package.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_runfiles_group//runfiles_group:lib",
        "@rules_runfiles_group//runfiles_group:providers",
    ],
)
