load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "interpreter_lib",
    srcs = ["main.go"],
    importpath = "example/producer/interpreter",
    visibility = ["//visibility:private"],
    deps = [
        "@net_starlark_go//starlark",
        "@net_starlark_go//syntax",
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "interpreter",
    embed = [":interpreter_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
