load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "starlark_library",
    srcs = ["starlark_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//producer/providers",
        "@rules_runfiles_group//runfiles_group:providers",
    ],
)

bzl_library(
    name = "starlark_binary",
    srcs = ["starlark_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//producer/providers",
        "@hermetic_launcher//launcher:lib_bzl",
        "@rules_runfiles_group//runfiles_group:providers",
    ],
)
