load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "runfiles_group_info",
    srcs = ["runfiles_group_info.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "runfiles_group_metadata_info",
    srcs = ["runfiles_group_metadata_info.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "runfiles_group_transform_info",
    srcs = ["runfiles_group_transform_info.bzl"],
    visibility = ["//:__subpackages__"],
)
