load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "loadmap_lib",
    srcs = ["main.go"],
    importpath = "example/producer/interpreter/loadmap",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "loadmap",
    embed = [":loadmap_lib"],
    visibility = ["//visibility:public"],
)
